--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
-    "dayjs": "^1.11.13",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-signature-canvas": "^1.0.6",
